k8s/demo-project/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "25m"
            memory: "200M"
        ports:
        - containerPort:  27017
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017 # expose service port
    targetPort: 27017 # container port
