k8s/demo-project/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: default
  labels:
    name: dashboard-ingress
spec:
  rules:
  - host: task-lumen.com
    http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth-nginx-service.auth-lumen
            port: 
              number: 80
